--- a/index.html
+++ b/index.html
@@ -58,24 +58,24 @@
         <!-- Topbar End -->
 
         <!-- Navbar Start   bg-primary-->
-        <div class="container-fluid" style="background-color: #FFFFFF;">
+        <div class="container-fluid" style="background-color:#FFFFFF;">
             <div class="container">
-                <nav class="navbar navbar-dark navbar-expand-lg py-0">
+                <nav class="navbar navbar-dark navbar-expand-lg py-0  ">
                     <a href="index.html" class="navbar-brand">
-                        <!-- <div>
-                            <img src="images/logo.png" loading="lazy" class="w-10 object-cover aspect-square rounded-full" alt="">
-                        </div>   -->
-                         <h5 class="text-white fw-bold d-block">  HIGHER GROUND <span class="text-blue-600">ASSEMBLY</span>
+                        <!-- <div> -->
+                            <img src="images/rccg.png"    loading="lazy" class="w-10 object-cover aspect-square rounded-full" alt="">
+                        <!-- </div>   -->
+                         <!-- <h5 class="text-white fw-bold d-block">  HIGHER GROUND <span class="text-blue-600">ASSEMBLY</span>
                           </h5>
                           <p class="text-xs italic text-[#515b6b]">
                             Pressing Forward... Making Potentials Real
                         </p> 
-                      
+                       -->
                     </a>
                     <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <!-- <div class="collapse navbar-collapse bg-transparent" id="navbarCollapse">
+                 <!-- <div class="collapse navbar-collapse bg-transparent" id="navbarCollapse">
                         <div class="navbar-nav ms-auto mx-xl-auto p-0">
                             <a href="index.html" class="nav-item nav-link active text-secondary">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
@@ -92,8 +92,8 @@
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-                    </div>
-                    <div class="d-none d-xl-flex flex-shirink-0">
+                    </div> -->
+                    <!-- <div class="d-none d-xl-flex flex-shirink-0">
                         <div id="phone-tada" class="d-flex align-items-center justify-content-center me-4">
                             <a href="" class="position-relative animated tada infinite">
                                 <i class="fa fa-phone-alt text-white fa-2x"></i>
@@ -101,15 +101,15 @@
                                     <span><i class="fa fa-comment-dots text-secondary"></i></span>
                                 </div>
                             </a>
-                        </div>
-                        <div class="d-flex flex-column pe-4 border-end">
+                        </div> -->
+                        <!-- <div class="d-flex flex-column pe-4 border-end">
                             <span class="text-white-50">Have any questions?</span>
                             <span class="text-secondary">Call: + 0123 456 7890</span>
-                        </div>
+                        </div> -->
                         <div class="d-flex align-items-center justify-content-center ms-4 ">
-                            <a href="#"><i class="bi bi-search text-white fa-2x"></i> </a>
+                            <img  width="200px" height="100px"  src="images/logoflyer.jpg" loading="lazy" class="w-10 object-cover aspect-square rounded-full" alt="">
                         </div>
-                    </div> -->
+                    </div> 
                 </nav>
             </div>
         </div>
@@ -199,9 +199,9 @@
                 <div class="row g-5">
                     <div class="col-lg-5 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".3s">
                         <div class="h-100 position-relative">
-                            <img src="img/about-1.jpg" class="img-fluid w-75 rounded" alt="" style="margin-bottom: 25%;">
+                            <img src="images/hall.jpg" class="img-fluid w-75 rounded" alt="" style="margin-bottom: 25%;">
                             <div class="position-absolute w-75" style="top: 25%; left: 25%;">
-                                <img src="img/about-2.jpg" class="img-fluid w-100 rounded" alt="">
+                                <img src="images/hall1.jpg" class="img-fluid w-100 rounded" alt="">
                             </div>
                         </div>
                     </div>
