--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <div class="container-fluid px-0">
             <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="First slide"></li>
-                    <li data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Second slide"></li>
+                    <!-- <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="First slide"></li> -->
+                    <!-- <li data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Second slide"></li> -->
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
@@ -129,7 +129,10 @@
                             <div class="container carousel-content">
                                 <!-- <h6 class="text-secondary h4 animated fadeInUp">Possibility Power Conference 2024</h6> -->
                                 <h1 class="text-white display-1 mb-4 animated fadeInRight">Seeds of Greatness </p>
-                                <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
+                                <!-- <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
+                                <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a> -->
+
+                                <a href="" class="me-2"><button type="button"  style="background-color: #A4C639;" class="px-4 py-sm-3 px-sm-5 btn  rounded-pill carousel-content-btn1 animated fadeInLeft">Get Tickets</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
                             </div>
                         </div>
@@ -141,26 +144,26 @@
                                 <!-- <h6 class="text-secondary h4 animated fadeInUp"> Power Conference 2024</h6> -->
                                 <h1 class="text-white display-1 mb-4 animated fadeInLeft"> flourish and inspire others</h1>
                                 <!-- <p class="mb-4 text-white fs-5 animated fadeInDown">Together, we nurture the seeds of greatness within ourselves to flourish and inspire others</p> -->
-                                <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
+                                <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">GET TICKETS</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
+                <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
-                </button>
+                </button> -->
             </div>
         </div>
         <!-- Carousel End -->
       
         <!-- Fact Start -->
-        <div class="container-fluid bg-secondary py-5">
+        <!-- <div class="container-fluid bg-secondary py-5"> -->
             <!-- <div class="container">
                 <div class="row">
                     <div class="col-lg-3 wow fadeIn" data-wow-delay=".1s">
@@ -189,7 +192,7 @@
                     </div>
                 </div>
             </div> -->
-        </div>
+        <!-- </div> -->
         <!-- Fact End -->
 
 
