--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <nav class="navbar navbar-dark navbar-expand-lg py-0  ">
                     <a href="index.html" class="navbar-brand">
                         <!-- <div> -->
-                            <img src="images/rccg.png"    loading="lazy" class="w-10 object-cover aspect-square rounded-full" alt="">
+                            <img src="images/rccg.png"  height="100px"    loading="lazy" class="  w-10 object-cover aspect-square rounded-full" alt="">
                         <!-- </div>   -->
                          <!-- <h5 class="text-white fw-bold d-block">  HIGHER GROUND <span class="text-blue-600">ASSEMBLY</span>
                           </h5>
@@ -75,8 +75,8 @@
                     <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                 <!-- <div class="collapse navbar-collapse bg-transparent" id="navbarCollapse">
-                        <div class="navbar-nav ms-auto mx-xl-auto p-0">
+                  <div class="collapse navbar-collapse bg-transparent" id="navbarCollapse">
+                        <!-- <div class="navbar-nav ms-auto mx-xl-auto p-0">
                             <a href="index.html" class="nav-item nav-link active text-secondary">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
@@ -91,8 +91,8 @@
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        </div>
-                    </div> -->
+                        </div> -->
+                    </div> 
                     <!-- <div class="d-none d-xl-flex flex-shirink-0">
                         <div id="phone-tada" class="d-flex align-items-center justify-content-center me-4">
                             <a href="" class="position-relative animated tada infinite">
