--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <!-- Navbar Start   bg-primary-->
         <div class="container-fluid" style="background-color:#FFFFFF;">
             <div class="container">
-                <nav class="navbar navbar-dark navbar-expand-lg py-0  ">
+                <nav class="navbar navbar-dark  ">
                     <a href="index.html" class="navbar-brand">
                         <!-- <div> -->
-                            <img src="images/rccg.png"  height="100px"    loading="lazy" class="  w-10 object-cover aspect-square rounded-full" alt="">
+                            <img src="images/rccg.png"  height="60px"    loading="lazy" class="   object-cover aspect-square rounded-full" alt="">
                         <!-- </div>   -->
                          <!-- <h5 class="text-white fw-bold d-block">  HIGHER GROUND <span class="text-blue-600">ASSEMBLY</span>
                           </h5>
@@ -107,7 +107,7 @@
                             <span class="text-secondary">Call: + 0123 456 7890</span>
                         </div> -->
                         <div class="d-flex align-items-center justify-content-center ms-4 ">
-                            <img  width="200px" height="100px"  src="images/logoflyer.jpg" loading="lazy" class="w-10 object-cover aspect-square rounded-full" alt="">
+                            <img   height="60px" src="images/logoflyer.jpg" loading="lazy" class="w-10 object-cover aspect-square rounded-full" alt="">
                         </div>
                     </div> 
                 </nav>
