--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <!-- Navbar Start   bg-primary-->
         <div class="container-fluid" style="background-color:#FFFFFF;">
-            <div class="container">
+            <div class="conta">
                 <nav class="navbar navbar-dark  ">
                     <a href="index.html" class="navbar-brand">
                         <!-- <div> -->
