--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
                                 <!-- <h6 class="text-secondary h4 animated fadeInUp"> Power Conference 2024</h6> -->
                                 <h1 class="text-white display-1 mb-4 animated fadeInLeft"> flourish and inspire others</h1>
                                 <!-- <p class="mb-4 text-white fs-5 animated fadeInDown">Together, we nurture the seeds of greatness within ourselves to flourish and inspire others</p> -->
-                                <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">GET TICKETS</button></a>
+                                <a href="" class="me-2"><button type="button"  style="background-color: #A4C639;" class="px-4 py-sm-3 px-sm-5 btn  rounded-pill carousel-content-btn1 animated fadeInLeft">GET TICKETS</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button"  style="background-color: white;" data-bs-target="#carouselId" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
+                <button class="carousel-control-next" type="button"  style="background-color: white;"data-bs-target="#carouselId" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
@@ -409,7 +409,10 @@
                 <div class="container">
                     <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                         <!-- <h5 class="text-primary">Our Project</h5> -->
-                        <h1>Worship Ministers</h1>
+                         <div class="project-item"> 
+                            <h1>Worship Ministers</h1>
+                         </div>
+                    
                     </div>
                     <div class="row g-5">
                         <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
@@ -912,7 +915,7 @@
                         </div> -->
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="#" class="h3 text-secondary">Contact Us</a>
+                        <a href="#" class="h3 " style="color:#842281 ;">Contact Us</a>
                         <div class="text-white mt-4 d-flex flex-column contact-link">
                             <a href="#" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> 2021 LORD BALTIMORE DRIVE . WINDSOR MILL ,MD 21244   USA</a>
                             <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> [410] 944-3323</a>
