--- a/index.html
+++ b/index.html
@@ -917,16 +917,16 @@
                     <div class="col-lg-3 col-md-6">
                         <a href="#" class="h3 " style="color:#842281 ;">Contact Us</a>
                         <div class="text-white mt-4 d-flex flex-column contact-link">
-                            <a href="#" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> 2021 LORD BALTIMORE DRIVE . WINDSOR MILL ,MD 21244   USA</a>
-                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> [410] 944-3323</a>
-                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i> ADMIN@RCCGHIGHERGROUND.ORG</a>
+                            <a href="#" class="pb-3 text-light border-bottom border-primary"><i  style="color:#842281 ;" class="fas fa-map-marker-alt  me-2"></i> 2021 LORD BALTIMORE DRIVE . WINDSOR MILL ,MD 21244   USA</a>
+                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt  me-2" style="color:#842281 ;"></i> [410] 944-3323</a>
+                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope  me-2" style="color:#842281 ;"></i> ADMIN@RCCGHIGHERGROUND.ORG</a>
                         </div>
                     </div>
                 </div>
                 <hr class="text-light mt-5 mb-4">
                 <div class="row">
-                    <div class="col-md-6 text-center text-md-start">
-                        <span class="text-light"><a href="#" class="text-secondary"><i class="fas fa-copyright text-secondary me-2"></i>PPC2024</a>, All right reserved.</span>
+                    <div class="col-md-6 text-center text-md-start" style="color:#842281 ;">
+                        <span style="color:#842281 ;" class="text-light"><a href="#" class="" class="text-light"  style="color:#842281 ;"><i  class="fas fa-copyright me-2"></i>PPC2024</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
