--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <!-- <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a> -->
 
-                                <a href="https://www.eventbrite.com/e/possibility-power-conference-2024-tickets-952061420337?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl" class="me-2"><button type="button"  style="background-color: #A4C639;" class="px-4 py-sm-3 px-sm-5 btn  rounded-pill carousel-content-btn1 animated fadeInLeft">Get Tickets</button></a>
+                                <a href="https://www.eventbrite.com/e/possibility-power-conference-2024-tickets-952061420337?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl" class="me-2"><button type="button"  style="background-color: #A4C639;" class="px-4 py-sm-3 px-sm-5 btn  rounded-pill carousel-content-btn1 animated fadeInLeft">GET TICKETS</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a>
                             </div>
                         </div>
@@ -322,7 +322,7 @@
                                 <img src="images/ayo.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Pastor Ayo Olulana</h4>
+                                        <h4 class="text-secondary text-white">Pastor Ayo Olulana</h4>
                                         <p class="m-0 text-white">SENIOR PASTOR
                                             RCCG HIGHER GROUND ASSEMBLY</p>
                                     </a>
@@ -336,7 +336,7 @@
                                 <img src="images/mummy.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Pastor Remi Olulana</h4>
+                                        <h4 class="text-secondary text-white">Pastor Remi Olulana</h4>
                                         <p class="m-0 text-white">SENIOR PASTOR
                                             RCCG HIGHER GROUND ASSEMBLY</p>
                                     </a>
@@ -350,7 +350,7 @@
                                 <img src="images/leke.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Pastor Leke Sanusi</h4>
+                                        <h4 class="text-secondary text-white">Pastor Leke Sanusi</h4>
                                         <!-- <p class="m-0 text-white">SENIOR PASTOR -->
                                             <!-- RCCG JESUS HOUSE CHICAGO</p> -->
                                     </a>
@@ -364,7 +364,7 @@
                                 <img src="images/funmi.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Pastor Funmi Obilana</h4>
+                                        <h4 class="text-secondary text-white">Pastor Funmi Obilana</h4>
                                         <p class="m-0 text-white">SENIOR PASTOR
                                             RCCG LIVING SPRING MIRACLE CENTER</p>
                                     </a>
@@ -378,7 +378,7 @@
                                 <img src="images/bayoguy.jpg" class="img-fluid w-100 rounded" alt="">
                                 <div class="project-content">
                                     <a href="#" class="text-center">
-                                        <h4 class="text-secondary">Pastor Bayo Adewole</h4>
+                                        <h4 class="text-secondary  text-white">Pastor Bayo Adewole</h4>
                                         <!-- <p class="m-0 text-white">SENIOR PASTOR
                                             RCCG LIVING SPRING MIRACLE CENTER</p> -->
                                     </a>
@@ -409,8 +409,8 @@
                 <div class="container">
                     <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                         <!-- <h5 class="text-primary">Our Project</h5> -->
-                         <div class="project-item"> 
-                            <h1>Worship Ministers</h1>
+                         <div class="project-item  container" style="background:  var(--bs-primary);;"> 
+                            <h1 class="text-white">Worship Ministers</h1>
                          </div>
                     
                     </div>
@@ -421,7 +421,7 @@
                                     <img src="images/PC Pst James.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="project-content">
                                         <a href="#" class="text-center">
-                                            <h4 class="text-secondary">Pastor James Okon</h4>
+                                            <h4 class="text-secondary text-white">Pastor James Okon</h4>
                                             <!-- <p class="m-0 text-white">SENIOR PASTOR
                                                 RCCG HIGHER GROUND ASSEMBLY</p> -->
                                         </a>
@@ -435,7 +435,7 @@
                                     <img src="images/PC Cosmos.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="project-content">
                                         <a href="#" class="text-center">
-                                            <h4 class="text-secondary">Cosmos</h4>
+                                            <h4 class="text-seconda text-white">Cosmos</h4>
                                             <!-- <p class="m-0 text-white">SENIOR PASTOR -->
                                                 <!-- RCCG HIGHER GROUND ASSEMBLY</p> -->
                                         </a>
@@ -449,7 +449,7 @@
                                     <img src="images/PC Josh.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="project-content">
                                         <a href="#" class="text-center">
-                                            <h4 class="text-secondary">Josh Blayze</h4>
+                                            <h4 class="text-secondary  text-white">Josh Blayze</h4>
                                             <!-- <p class="m-0 text-white">SENIOR PASTOR -->
                                                 <!-- RCCG JESUS HOUSE CHICAGO</p> -->
                                         </a>
@@ -463,7 +463,7 @@
                                     <img src="images/PC Enkay.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="project-content">
                                         <a href="#" class="text-center">
-                                            <h4 class="text-secondary">Enkay</h4>
+                                            <h4 class="text-secondary text-white">Enkay</h4>
                                             <!-- <p class="m-0 text-white">SENIOR PASTOR -->
                                                 <!-- RCCG VICTORY TEMPLE BOWIE</p> -->
                                         </a>
@@ -477,7 +477,7 @@
                                     <img src="images/PC Lawrence.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="project-content">
                                         <a href="#" class="text-center">
-                                            <h4 class="text-secondary">Min Lawrence Decovenant</h4>
+                                            <h4 class="text-secondary  text-white">Min Lawrence Decovenant</h4>
                                             <!-- <p class="m-0 text-white">SENIOR PASTOR -->
                                                 <!-- RCCG LIVING SPRING MIRACLE CENTER</p> -->
                                         </a>
