--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                 <div class="container">
                     <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                         <!-- <h5 class="text-primary">Our Project</h5> -->
-                         <div class="project-item  container border-0" style="background:  var(--bs-primary);;"> 
+                         <div class="   border-0 p-3" style="background:  #842281;;"> 
                             <h1 class="text-white">Worship Ministers</h1>
                          </div>
                     
