--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <div class="container">
                 <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                     <!-- <h5 class="text-primary">Our Project</h5> -->
-                    <h1>Know The Ministers</h1>
+                    <h1 style="background:  #842281;;" class="text-white p-3">Guest Ministers</h1>
                 </div>
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
